# random_projects

./: .Rhistory  Games.py  README.md  Roulette.py  euler_method.R  genetic_polynomial.py  k_means.R  txt_elab.py
Advanced_Programming_Homeworks/DataFrame/: .CMakeLists.txt.swp  .readme.MD.swp  CMakeLists.txt  README.MD
Advanced_Programming_Homeworks/DataFrame/bindings/: integrMod_bindings.cpp  statsMod_bindings.cpp
Advanced_Programming_Homeworks/DataFrame/data/: output.csv
Advanced_Programming_Homeworks/DataFrame/examples/: mainc.cpp
Advanced_Programming_Homeworks/DataFrame/src/: integrMod.cpp  integrMod.hpp  statsMod.cpp  statsMod.hpp
Advanced_Programming_Homeworks/SparseMatrix/: README.txt  SparseMatrix.cpp  SparseMatrix.hpp  build.sh  main  main.cpp
first_programs/: .Games.py.swp  Games.py  Roulette.py  euler_method.R  optimize.R  poker.R
first_steps/: genetic_polynomial.py  txt_elab.py
gol/: CMakeLists.txt  gol  gol.cpp
ml_scripts/k_means/: .Rhistory
ml_scripts/nn/: mynn.ipynb
ml_scripts/trees/: tree.py
simDesease/: .Rhistory  main.cpp  plot_results.R  results.csv  run_simulation.sh  sim.cpp  sim.hpp
zipfc++/: .Rhistory  build.sh  main.cpp  output.txt  zipf.R  zipf.cpp  zipf.hpp
